force-app/main/default/objects/Master__c/Master__c.object-meta.xml
<CustomObject>
    <description>This is master object.</description>
    <label>Master</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>