force-app/main/default/objects/Master__c/fields/Avg_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Avg_Conversion__c</fullName>
    <label>Avg Conversion %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>