force-app/main/default/objects/Master__c/fields/Avg_Opportunites_Month__c.field-meta.xml
<CustomField>
    <fullName>Avg_Opportunites_Month__c</fullName>
    <label>Avg Opportunites / Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>