force-app/main/default/objects/Master__c/fields/Blitz_Property__c.field-meta.xml
<CustomField>
    <fullName>Blitz_Property__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blitz Property</label>
    <type>Checkbox</type>
</CustomField>