force-app/main/default/objects/Master__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HomeLane</fullName>
            </value>
            <value>
                <fullName>Doowup</fullName>
            </value>
            <value>
                <fullName>Wrapzap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>