force-app/main/default/objects/Master__c/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BU</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BU</relationshipName>
    <type>Lookup</type>
</CustomField>