force-app/main/default/objects/Master__c/fields/BU_Head__c.field-meta.xml
<CustomField>
    <fullName>BU_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BU Head</label>
    <referenceTo>Showroom_User__c</referenceTo>
    <relationshipLabel>Master (BU Head)</relationshipLabel>
    <relationshipName>Master_BU_Head</relationshipName>
    <type>Lookup</type>
</CustomField>