force-app/main/default/objects/Master__c/fields/Builder_full_Name__c.field-meta.xml
<CustomField>
    <fullName>Builder_full_Name__c</fullName>
    <label>Builder full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>