force-app/main/default/objects/Master__c/fields/Builder_Name__c.field-meta.xml
<CustomField>
    <fullName>Builder_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self Lookup On Master</description>
    <label>Builder Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Builder</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master__c</referenceTo>
    <relationshipLabel>Master</relationshipLabel>
    <relationshipName>Master</relationshipName>
    <type>Lookup</type>
</CustomField>