force-app/main/default/objects/Master__c/fields/Corrected_By__c.field-meta.xml
<CustomField>
    <fullName>Corrected_By__c</fullName>
    <label>Corrected By</label>
    <length>140</length>
    <type>Text</type>
</CustomField>