force-app/main/default/objects/Master__c/fields/CreationType__c.field-meta.xml
<CustomField>
    <fullName>CreationType__c</fullName>
    <label>CreationType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google-Automatic</fullName>
            </value>
            <value>
                <fullName>Google-Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>