force-app/main/default/objects/Master__c/fields/Customers_Met__c.field-meta.xml
<CustomField>
    <fullName>Customers_Met__c</fullName>
    <label>Customers Met</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>