force-app/main/default/objects/Master__c/fields/DataBase_Type__c.field-meta.xml
<CustomField>
    <fullName>DataBase_Type__c</fullName>
    <label>DataBase Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Unverified</fullName>
            </value>
            <value>
                <fullName>PT_v1</fullName>
            </value>
            <value>
                <fullName>PT_v2</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>