force-app/main/default/objects/Master__c/fields/Delivery_Manager__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Master2</relationshipName>
    <type>Lookup</type>
</CustomField>