force-app/main/default/objects/Master__c/fields/Design_Manager__c.field-meta.xml
<CustomField>
    <fullName>Design_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Design Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Master1</relationshipName>
    <type>Lookup</type>
</CustomField>