force-app/main/default/objects/Master__c/fields/Exotel_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Exotel_Phone_Number__c</fullName>
    <label>Exotel Phone Number</label>
    <type>Phone</type>
</CustomField>