force-app/main/default/objects/Master__c/fields/InActivated_May_10__c.field-meta.xml
<CustomField>
    <fullName>InActivated_May_10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InActivated May 10</label>
    <type>Checkbox</type>
</CustomField>