force-app/main/default/objects/Master__c/fields/Is_Associated_With_Lead_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Is_Associated_With_Lead_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Associated With Lead/Opportunity</label>
    <type>Checkbox</type>
</CustomField>