force-app/main/default/objects/Master__c/fields/Is_Out_of_Servicing_Area_City_Record__c.field-meta.xml
<CustomField>
    <fullName>Is_Out_of_Servicing_Area_City_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Out of Servicing Area City Record</label>
    <type>Checkbox</type>
</CustomField>