force-app/main/default/objects/Master__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the Showroom is active the isActive then check it else Uncheck</description>
    <label>IsActive ShowRoom</label>
    <type>Checkbox</type>
</CustomField>