force-app/main/default/objects/Master__c/fields/IsPropertyTiger__c.field-meta.xml
<CustomField>
    <fullName>IsPropertyTiger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPropertyTiger</label>
    <type>Checkbox</type>
</CustomField>