force-app/main/default/objects/Master__c/fields/Latlong_present__c.field-meta.xml
<CustomField>
    <fullName>Latlong_present__c</fullName>
    <formula>IF( ISBLANK(Property_Lat_Long__c),false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latlong present?</label>
    <type>Checkbox</type>
</CustomField>