force-app/main/default/objects/Master__c/fields/Launched_Units__c.field-meta.xml
<CustomField>
    <fullName>Launched_Units__c</fullName>
    <label>Launched Units</label>
    <length>10</length>
    <type>Text</type>
</CustomField>