force-app/main/default/objects/Master__c/fields/Luxe_service__c.field-meta.xml
<CustomField>
    <fullName>Luxe_service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Luxe service</label>
    <type>Checkbox</type>
</CustomField>