force-app/main/default/objects/Master__c/fields/Max_Size_Range_2BHK__c.field-meta.xml
<CustomField>
    <fullName>Max_Size_Range_2BHK__c</fullName>
    <label>Max Size Range - 2BHK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>