force-app/main/default/objects/Master__c/fields/N_1_Showroom_Conversion__c.field-meta.xml
<CustomField>
    <fullName>N_1_Showroom_Conversion__c</fullName>
    <formula>IF( N_9_to_N_3_Total_Opportunities__c &gt; 0, N_9_to_N_3_Total_Won_Opportunities__c /N_9_to_N_3_Total_Opportunities__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N-1 Showroom Conversion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>