force-app/main/default/objects/Master__c/fields/N_8_to_N_2_Total_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>N_8_to_N_2_Total_Won_Opportunities__c</fullName>
    <label>N-8 to N-2 Total Won Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>