force-app/main/default/objects/Master__c/fields/N_9_to_N_3_Total_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>N_9_to_N_3_Total_Opportunities__c</fullName>
    <label>N-9 to N-3 Total Opportunitie</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>