force-app/main/default/objects/Master__c/fields/Name_Length__c.field-meta.xml
<CustomField>
    <fullName>Name_Length__c</fullName>
    <formula>LEN( Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>