force-app/main/default/objects/Master__c/fields/Pilot_ShowRoom__c.field-meta.xml
<CustomField>
    <fullName>Pilot_ShowRoom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pilot ShowRoom</label>
    <type>Checkbox</type>
</CustomField>