force-app/main/default/objects/Master__c/fields/PlaceId__c.field-meta.xml
<CustomField>
    <fullName>PlaceId__c</fullName>
    <label>PlaceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>