force-app/main/default/objects/Master__c/fields/Projects_Completed__c.field-meta.xml
<CustomField>
    <fullName>Projects_Completed__c</fullName>
    <label>Projects Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>