force-app/main/default/objects/Master__c/fields/Projects_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>Projects_in_Progress__c</fullName>
    <label>Projects in Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>