force-app/main/default/objects/Master__c/fields/Promotor__c.field-meta.xml
<CustomField>
    <fullName>Promotor__c</fullName>
    <label>Promotor %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>