force-app/main/default/objects/Master__c/fields/Property_Active_Flag__c.field-meta.xml
<CustomField>
    <fullName>Property_Active_Flag__c</fullName>
    <label>Property Active Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activate</fullName>
            </value>
            <value>
                <fullName>Deactivate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>