force-app/main/default/objects/Master__c/fields/Property_Config__c.field-meta.xml
<CustomField>
    <fullName>Property_Config__c</fullName>
    <label>Property Config</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1BHK</fullName>
            </value>
            <value>
                <fullName>2BHK</fullName>
            </value>
            <value>
                <fullName>3BHK</fullName>
            </value>
            <value>
                <fullName>4BHK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>