force-app/main/default/objects/Master__c/fields/Property_Landmark__c.field-meta.xml
<CustomField>
    <fullName>Property_Landmark__c</fullName>
    <label>Landmark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>