force-app/main/default/objects/Master__c/fields/Property_Lat_Long__c.field-meta.xml
<CustomField>
    <fullName>Property_Lat_Long__c</fullName>
    <label>Property Lat-Long</label>
    <length>255</length>
    <type>Text</type>
</CustomField>