force-app/main/default/objects/Master__c/fields/Property_Locality__c.field-meta.xml
<CustomField>
    <fullName>Property_Locality__c</fullName>
    <label>Locality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>