force-app/main/default/objects/Master__c/fields/Property_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Postal_Code__c</fullName>
    <label>Postal Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>