force-app/main/default/objects/Master__c/fields/RERA_Id__c.field-meta.xml
<CustomField>
    <fullName>RERA_Id__c</fullName>
    <label>RERA Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>