force-app/main/default/objects/Master__c/fields/Residence_Visit_SSA__c.field-meta.xml
<CustomField>
    <fullName>Residence_Visit_SSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residence Visit SSA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MasterSSAResidence</relationshipName>
    <type>Lookup</type>
</CustomField>