force-app/main/default/objects/Master__c/fields/Sales_Manager_Virtual_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Virtual_Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager Virtual Meeting</label>
    <referenceTo>Showroom_User__c</referenceTo>
    <relationshipLabel>Master (Sales Manager Virtual Meeting)</relationshipLabel>
    <relationshipName>Master</relationshipName>
    <type>Lookup</type>
</CustomField>