force-app/main/default/objects/Master__c/fields/Second_Meeting_Calendar_ID__c.field-meta.xml
<CustomField>
    <fullName>Second_Meeting_Calendar_ID__c</fullName>
    <label>Second Meeting Calendar ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>