force-app/main/default/objects/Master__c/fields/Showroom_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Showroom_Conversion__c</fullName>
    <formula>IF( N_8_to_N_2_Total_Opportunities__c &gt; 0, N_8_to_N_2_Total_Won_Opportunities__c /N_8_to_N_2_Total_Opportunities__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Showroom Conversion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>