force-app/main/default/objects/Master__c/fields/Showroom_Manager__c.field-meta.xml
<CustomField>
    <fullName>Showroom_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Showroom Manager</label>
    <referenceTo>Showroom_User__c</referenceTo>
    <relationshipLabel>Master</relationshipLabel>
    <relationshipName>Master_Showroom_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>