force-app/main/default/objects/Master__c/fields/SM__c.field-meta.xml
<CustomField>
    <fullName>SM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SM</relationshipName>
    <type>Lookup</type>
</CustomField>