force-app/main/default/objects/Master__c/fields/SSM__c.field-meta.xml
<CustomField>
    <fullName>SSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is created temporary need to write code RR</description>
    <label>SSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Master</relationshipName>
    <type>Lookup</type>
</CustomField>