force-app/main/default/objects/Master__c/fields/Total_DP_With_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Total_DP_With_Opportunity__c</fullName>
    <label>Total DP With Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>