force-app/main/default/objects/Master__c/fields/Total_Won_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Total_Won_Opportunity__c</fullName>
    <label>Total Won Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>