force-app/main/default/objects/Master__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Property</fullName>
                <default>true</default>
                <label>Property</label>
            </value>
            <value>
                <fullName>Showroom</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Walk-in Source</fullName>
            </value>
            <value>
                <fullName>Dealer Showroom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>