force-app/main/default/objects/Master__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <description>Name After removing the special Character</description>
    <label>Unique Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>