force-app/main/default/objects/Master__c/fields/Units_sold_till_Dec_18__c.field-meta.xml
<CustomField>
    <fullName>Units_sold_till_Dec_18__c</fullName>
    <label>Units sold till Dec&apos;18</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>