force-app/main/default/objects/Master__c/fields/Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Verification_Status__c</fullName>
    <label>Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google Verified</fullName>
            </value>
            <value>
                <fullName>Google Not Verified</fullName>
            </value>
            <value>
                <fullName>Manually Verified</fullName>
            </value>
            <value>
                <fullName>Cannot be verified</fullName>
            </value>
            <value>
                <fullName>To be Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>