force-app/main/default/objects/Master__c/fields/WalkIn_SSA__c.field-meta.xml
<CustomField>
    <fullName>WalkIn_SSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WalkIn SSA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>WalkInSSA</relationshipName>
    <type>Lookup</type>
</CustomField>