force-app/main/default/objects/Master__c/fields/Wtd_Average_Price__c.field-meta.xml
<CustomField>
    <fullName>Wtd_Average_Price__c</fullName>
    <label>Wtd. Average Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>