force-app/main/default/objects/Master__c/fields/X18_Digit_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Record_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Record ID</label>
    <type>Text</type>
</CustomField>