force-app/main/default/objects/Master__c/recordTypes/Builder.recordType-meta.xml
<RecordType>
    <fullName>Builder</fullName>
    <active>true</active>
    <label>Builder</label>
</RecordType>