force-app/main/default/objects/Master__c/validationRules/Restrict_Delete_Master_Default.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Delete_Master_Default</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 Deleted__c = TRUE,
ISCHANGED(Name)
)</errorConditionFormula>
    <errorMessage>You cannot rename the default builder !!</errorMessage>
</ValidationRule>