force-app/main/default/objects/Master__c/validationRules/Restriction_to_create_default.validationRule-meta.xml
<ValidationRule>
    <fullName>Restriction_to_create_default</fullName>
    <active>false</active>
    <errorConditionFormula>Name =&apos;Default Builder&apos; || Name =&apos;default builder&apos; || Name =&apos;Default Property&apos; || Name =&apos;default property&apos; || Name =&apos;default&apos; || Name =&apos;Default&apos;</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You Cannot Create Default Record !!</errorMessage>
</ValidationRule>