force-app/main/default/objects/Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property_Type__c</columns>
    <columns>Type__c</columns>
    <columns>Property_City__c</columns>
    <columns>Migrated__c</columns>
    <columns>SSM__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>