force-app/main/default/objects/Master__c/listViews/Walk_In_Source.listView-meta.xml
<ListView>
    <fullName>Walk_In_Source</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Builder_Name__c</columns>
    <columns>Property_City__c</columns>
    <columns>Property_Landmark__c</columns>
    <columns>Property_Locality__c</columns>
    <columns>Migrated__c</columns>
    <columns>Property_Postal_Code__c</columns>
    <columns>Property_Type__c</columns>
    <columns>SSM__c</columns>
    <columns>Property_State__c</columns>
    <columns>Street__c</columns>
    <columns>Type__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Walk-in Source</value>
    </filters>
    <label>Walk-In Source</label>
</ListView>